--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-  <head><!-- where all the meta data will go, like and files we need to include -->
+  <head>
+    <link rel="stylesheet" type="text/css" href="main.css" />
     <title>My Little Rainbow</title><!-- the title is what appears on your tab -->
   </head>
 
   <body><!-- the body element is where everything we will see on the page will go -->
 
-    <!-- our soon to be beautiful rainbow! -->
+    <div id="red">
     <div> <!-- the grandest grandparent div -->
       <div>
         <div>
